--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="w-full max-w-4xl">
             <!-- العنوان الرئيسي -->
             <header class="text-center mb-8">
-                <img src="https://j.top4top.io/p_358488t9h1.png" alt="Portarage Oil Logo" 
+                <img src="https://i.top4top.io/p_35860o72q1.png" alt="Portarage Oil Logo" 
                      class="mx-auto max-w-md w-full h-auto rounded-lg shadow-lg"
                      onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
             </header>
