--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         </button>
                     </div>
                     <h2 class="text-2xl font-bold mb-4 text-center text-yellow-400">
-                        اختر نوع فلتر السياره
+                        اختر نوع السيارة للفلتر
                     </h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
                         <button onclick="selectCarType('german', 12)" 
