Fix typo in available oils count text

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
                             class="btn-gold text-black font-bold p-4 rounded-lg text-lg hover:scale-105 transition-transform ${availableOilsCount === 0 ? 'opacity-50 cursor-not-allowed' : ''}">
                         ${viscosity}
                         <br>
-                        <span class="text-sm">${availableOilsCount} زيوت متوفره</span>
+                        <span class="text-sm">${availableOilsCount} زيوت متاحه</span>
                     </button>
                 `;
             });
