--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                             <h3 class="text-lg font-bold text-yellow-400">${car.carModel}</h3>
                             <p class="text-gray-300 text-sm">اللزوجات: ${allViscosities.join(', ')}</p>
                             <p class="text-gray-300 text-sm">الكمية: ${car.liters} لتر</p>
-                            <p class="text-blue-400 text-sm font-semibold">${totalAvailableOils} زيت متاح</p>
+                            <p class="text-blue-400 text-sm font-semibold">${totalAvailableOils} زيوت متوفره</p>
                             ${totalAvailableOils === 0 ? '<p class="text-red-400 text-xs mt-1">⚠️ غير متوفر حالياً</p>' : ''}
                         </div>
                     `;
