--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oil Portarage</title>
-    <link rel="icon" type="image/png" href="https://f.top4top.io/p_3589qm7sl0.png">
+    <link rel="icon" type="image/png" href="https://e.top4top.io/p_3590fey0s1.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
